--- a/AspNetCore22Intro/Views/Shared/_Layout.cshtml
+++ b/AspNetCore22Intro/Views/Shared/_Layout.cshtml
@@ -12,16 +12,24 @@
     </environment>
 </head>
 <body>
-    <div>
-        <div>
-            <partial name="_LoginLinks">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/">Video Application</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+                <partial name="_LoginLinks" />
+            </ul>
         </div>
+    </nav>
+    <div class="container-fluid">
         @RenderBody()
     </div>
-    <footer>
+    @*<footer>
         @RenderSection("footer", false)
         @await Component.InvokeAsync("Message")
-    </footer>
+    </footer>*@
     <environment include="Development">
         <script src="~/lib/jquery/jquery.js"></script>
         <script src="~/lib/jquery-validate/jquery.validate.min.js"></script>
